# drain-swamp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  NOTICE.txt  README.rst  codecov.yml  howto.txt  igor.py  pyproject.toml  setup.py  tox-req.ini  tox-test.ini  tox.ini
.github/workflows/: branch-test-others.yml  codeql-analysis.yml  dependency-review.yml  gh-pages.yml  kit.yml  python-nightly.yml  quality-docs.yml  quality.yml  release.yml  test-coverage.yml  testsuite.yml
_req_links/: backend.py
docs/: .gitattributes  Makefile  _toc.yml  article-version-specifiers.rst  conf.py  contributing.rst  getting-help.rst  index.rst  mission.rst  objects-dss.inv  objects-dss.txt  objects-gh-black.inv  objects-gh-black.txt  objects-gh-ds.inv  objects-gh-ds.txt  objects-gh-dsa.inv  objects-gh-dsa.txt  objects-gh-setuptools-scm.inv  objects-gh-setuptools-scm.txt  objects-gh-setuptools.inv  objects-gh-setuptools.txt  objects-packaging.inv  objects-packaging.txt  objects-pluggy.inv  objects-pluggy.txt  objects-python-missing.inv  objects-python-missing.txt  objects-python.inv  objects-setuptools-scm.inv  objects-setuptools-scm.txt  objects-setuptools.inv  objects-setuptools.txt  objects-snip.inv  objects-snip.txt  overview.rst  pip-tools.in  pip-tools.unlock  requirements.in  requirements.unlock
docs/LICENSE/: closed-source-license.rst  donation.rst  index.rst
docs/_static/: credit.txt
docs/_static/css/: custom.css
docs/api/: drain-swamp-build.rst  drain-swamp-cheats.rst  drain-swamp-current.rst  drain-swamp-list.rst  drain-swamp-pretag.rst  drain-swamp-seed.rst  index.rst  pipenv-unlock-is_lock.rst  pipenv-unlock-lock.rst  pipenv-unlock-unlock.rst
docs/code/: cli_dependencies.rst  cli_igor.rst  cli_scm_version.rst  cli_sphinx_conf.rst  cli_unlock.rst  index.rst  snip.rst
docs/getting_started/: build-package.rst  drain-swamp-files.rst  from-source.rst  index.rst  installation.rst  pipenv-unlock.rst  setuptools-scm.rst
docs/pipenv_unlock/: about_authors.rst  cringe-culture.rst  getting-started.rst  index.rst  invalid_pyproject_toml.rst
docs/snippets/: index.rst  snippets.rst
docs/sphinxcontrib_snip/: index.rst
docs/troubleshooting/: build-fail.rst  index.rst
docs/why/: about_authors.rst  cringe-culture.rst  index.rst
integration/: README.rst  test_pep366.py  test_upstream_click_issue.py
requirements/: dev.in  dev.unlock  kit.in  kit.unlock  manage.in  manage.unlock  mypy.in  mypy.unlock  pins-cffi.in  pins-cffi.unlock  pins.in  pins.shared.in  pip-tools.in  pip-tools.unlock  pip.in  pip.unlock  prod.in  prod.shared.in  prod.shared.unlock  prod.unlock  tox.in  tox.unlock
src/drain_swamp/: __init__.py  __init__.pyi  _debug_mode.py  _debug_mode.pyi  _package_installed.py  _package_installed.pyi  _repr.py  _repr.pyi  _run_cmd.py  _run_cmd.pyi  _safe_path.py  _safe_path.pyi  _version.py  _version.pyi  backend_abc.py  backend_abc.pyi  backend_setuptools.py  backend_setuptools.pyi  check_type.py  check_type.pyi  cli_dependencies.py  cli_dependencies.pyi  cli_igor.py  cli_igor.pyi  cli_scm_version.py  cli_scm_version.pyi  cli_sphinx_conf.py  cli_sphinx_conf.pyi  cli_unlock.py  cli_unlock.pyi  constants.py  constants.pyi  constants_maybe.py  constants_maybe.pyi  exceptions.py  exceptions.pyi  igor_utils.py  igor_utils.pyi  lock_collections.py  lock_collections.pyi  (+38 more)
tests/: conftest.py  test_backend_abc.py  test_backend_setuptools.py  test_build_plugin_manager.py  test_check_type.py  test_cli_dependencies.py  test_cli_igor.py  test_cli_scm_version.py  test_cli_sphinx_conf.py  test_cli_unlock.py  test_config_settings.py  test_constants.py  test_igor_utils.py  test_lock_collections.py  test_lock_compile.py  test_lock_datum.py  test_lock_discrepancy.py  test_lock_filepins.py  test_lock_fixing.py  test_lock_infile.py  test_lock_inspect.py  test_lock_toggle.py  test_lock_util.py  test_package_installed.py  test_package_metadata.py  test_parser_in.py  test_patch_pyproject_reading.py  test_patch_strftime.py  test_pep518_read.py  test_pep518_venvs.py  test_plugin_refresh_links.py  test_plugin_scm_version.py  test_repr.py  test_run_cmd.py  test_safe_path.py  test_snip.py  test_snippet_dependencies.py  test_snippet_sphinx_conf.py  test_version_file_dump.py  test_version_file_overrides.py  (+7 more)
tests/_bad_files/: backend_only.pyproject_toml  complete-version-other.pyproject_toml  keys-wrong-data-type.pyproject_toml  section_misspelled.pyproject_toml  snippet-nested.pyproject_toml  static-version.pyproject_toml  static_dependencies.pyproject_toml
tests/_bad_snips/: nested-snips.txt  out-of-order-abrupt-end.txt  out-of-order-double-end-tag.txt  out-of-order-starts-with-end-tag.txt
tests/_changelog_files/: CHANGES-empty.rst  CHANGES-missing-start-token.rst  NOTICE-empty.txt
tests/_good_files/: backend-only.pyproject_toml  backend-unsupported.pyproject_toml  complete-lnk-files.pyproject_toml  complete-manage-pip-prod-unlock.pyproject_toml  complete-manage-pip-prod.pyproject_toml  complete-version-txt.pyproject_toml  complete.pyproject_toml  multiple-snippets.pyproject_toml  no_copyright.pyproject_toml  no_project_name.pyproject_toml  nonsense-keys.pyproject_toml  requires-none.pyproject_toml  thin-wrap-backend.pyproject_toml  weird_copyright-2.pyproject_toml  weird_copyright.pyproject_toml
tests/_good_snips/: test_snip_harden_one_snip__with_id__no_change_.txt  test_snip_harden_one_snip__with_id__no_key___key_.txt  test_snip_harden_three_snips__All_have_id__match_1st_and_3rd_.txt  test_snip_harden_two_snips__both_have_id__match_1st_.txt  test_snip_harden_two_snips__both_have_id__match_2nd_.txt
tests/_project/: install_minimum.pyproject_toml
tests/_req_files/: constraints-conflicts.pyproject_toml  constraints-conflicts.unlock  constraints-various.unlock  prod.shared.in  prod.shared.unlock  venvs-not-folder.pyproject_toml  venvs-reqs-not-sequence.pyproject_toml  venvs.pyproject_toml  venvs_minimal.pyproject_toml
tests/test_snip/: test_snip_harden_No_snippet__Nothing_to_do_.txt  test_snip_harden_one_snip__with_id__key___no_key_.txt  (+4 more)
(+84 files in other folders)
